JDK-6719149 : Wrong "java/lang/String should not be loaded yet" assertion in fastdebug bits with UseStringCache
  • Type: Bug
  • Component: hotspot
  • Sub-Component: runtime
  • Affected Version: hs13
  • Priority: P3
  • Status: Closed
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2008-06-25
  • Updated: 2011-03-08
  • Resolved: 2011-03-08
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 6 JDK 7 Other
6u14Fixed 7Fixed hs14Fixed
Description
Wrong "java/lang/String should not be loaded yet" assertion with 
-XX:+AggressiveOpts -XX:+UseStringCache flags.

It is reproduced on all platforms, with 32 and 64bit jvm, with client and server compilers, with -Xmixed/comp/int modes. But only with fastdebug bits.

Comments
EVALUATION The assert was bogus since the code loads string class optionally just before the assert. Removed the assert.
29-09-2008

EVALUATION http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/e4355b352b7d
29-09-2008