6719149: Wrong "java/lang/String should not be loaded yet" assertion in fastdebug bits with UseStringCache

Assertion is invalid because java.lang.String may be initialized just before this assertion.

Reviewed-by: phh